--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -55,7 +55,7 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
-  font-weight: normal;
+  /* font-weight: normal; */
 }
 
 body {
@@ -110,14 +110,14 @@ body {
   color: #333;
 }
 
-p, .paragraph {
+/* p, .paragraph {
   font-weight: 400;
   color: #333;
   font-size: 16px;
   line-height: 26px;
   font-family: "Montserrat", sans-serif;
   margin-bottom: 1rem;
-}
+} */
 
 h1, h2, h3, h4, h5, h6 {
   color: #222;
